# mojo_lbm_tutorial

./: .gitignore  AoSTile.mojo  Channel_2D.mojo  CylinderFlow2D.mojo  LBM.mojo  LDC_Re100.mojo  README.md  SoATile2D.mojo  SoATile3D.mojo  SoATile3D_config.mojo  SoATile_D3Q27.mojo  main.mojo  pyproject.toml  reorderThreads.mojo  run_benchmark.mojo  run_benchmark_3D.mojo  run_benchmark_D3Q19.mojo  tiled.mojo  tiled_no_layout.mojo  u_velocity_results.txt  v_velocity_results.csv  vector.mojo
mojo_testing/: basic_testing TileTensor 3D.mojo  basic_testing TileTensor.mojo
src/experitmental/: generic_utils.mojo
src/lbm/: LBM.mojo  LBM_gpu_kernel.mojo  __init__.mojo  config.mojo  flags.mojo  lattice_models.mojo  moments.mojo  units.mojo
src/lbm/archive/base/: benchmark.mojo
src/lbm/archive/part_1/loop_unroll/: benchmark.mojo
src/lbm/archive/part_1/reorderThreads/: benchmark.mojo
src/lbm/archive/part_1/tiled/: benchmark.mojo
src/lbm/archive/part_1/tiled_no_layout/: benchmark.mojo
src/lbm/archive/part_2/AoS_Tile/: benchmark.mojo
src/lbm/geometry/: primatives.mojo
src/lbm/kernels/SRT/: LBM_gpu_kernel.mojo  __init__.mojo  benchmark.mojo  layouts_benchmarks.mojo  load_and_store.mojo
src/lbm/variations/base/: LBM_gpu_kernel.mojo  benchmark.mojo
src/lbm/variations/tensor_loads/: LBM_gpu_kernel.mojo
src/mojo_lbm_tutorial.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: __init__.mojo  contextTileTensor.mojo  vector.mojo
src/visualization/: __init__.mojo  _python_importer.mojo  pyvista_viewer.py
(+39 files in other folders)
