[project]
name = "mojo-lbm-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "mojo==1.0.0b1",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "pyvista>=0.48.4",
]


[tool.uv]
package = true

